--- a/frontend-ui/package.json
+++ b/frontend-ui/package.json
@@ -15,10 +15,14 @@
     "classnames": "^2.5.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.513.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^7.6.1",
     "react-to-print": "^3.1.0",
     "recharts": "^2.15.3",
