--- a/frontend-ui/package.json
+++ b/frontend-ui/package.json
@@ -16,6 +16,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.513.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
